--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
 -->
 
 <resources>
-    <string name="app_name">Cheesesquare</string>
+    <string name="app_name">Bolly-Musics</string>
 
   <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
     cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
@@ -25,5 +25,9 @@
     the big cheese.</string>
   <string name="checkin">Checkin</string>
   <string name="menu_settings">Settings</string>
+  <string name="country_name">Nigeria</string>
+  <string name="action_settings">Settings</string>
+  <string name="action_refresh">Settings</string>
+  <string name="action_new">Settings</string>
 
 </resources>
